# beginners-py

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: pages.yaml
_sources/: intro.md
_sources/chapter01/: data.ipynb  data.md  flow.ipynb  flow.md  intro.ipynb  intro.md
_sources/chapter02/: intro.ipynb  question.md  reading.md  writing.md
_sources/chapter03/: func.ipynb  func.md  intro.ipynb  intro.md  recursion.ipynb  recursion.md
book/: _config.yml  _toc.yml  conf.py  intro.md
book/chapter01/: data.md  flow.md
book/chapter02/: intro.md  reading.md  writing.md
book/chapter03/: func.md  intro.md  recursion.md
chapter01/: data.html  flow.html  intro.html
chapter02/: intro.html  question.html  reading.html  writing.html
chapter03/: func.html  intro.html  recursion.html
src/beginners_py/: __init__.py
